-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b21
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228583 | openjdk8u232 | Severin Gehwolf | P3 | Resolved | Fixed | b01 |
++ /usr/bin/tee /home/sgehwolf/openjdk9-hs-pristine/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/instanceKlass.o.log
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp: In static member function 'static void InstanceKlass::initialize_impl(instanceKlassHandle, Thread*)':
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:703: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:726: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:732: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:738: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:771: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:790: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:824: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:834: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:703: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:726: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:732: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:738: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:771: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:790: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:824: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:834: error: cannot reload integer constant operand in 'asm'
+ exitcode=1
+ /bin/cp /home/sgehwolf/openjdk9-hs-pristine/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/instanceKlass.o.log /home/sgehwolf/openjdk9-hs-pristine/build/linux-x86_64-normal-server-fastdebug/make-support/failure-logs/hotspot_variant-server_libjvm_objs_instanceKlass.o.log
+ exit 1
gmake[4]: *** [/home/sgehwolf/openjdk9-hs-pristine/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/instanceKlass.o] Error 1
gmake[4]: Leaving directory `/home/sgehwolf/openjdk9-hs-pristine/hotspot/make'
gmake[3]: *** [variant-server-libs] Error 2
gmake[3]: Leaving directory `/home/sgehwolf/openjdk9-hs-pristine/hotspot/make'
gmake[2]: *** [hotspot] Error 1
gmake[2]: Leaving directory `/home/sgehwolf/openjdk9-hs-pristine'
$ gcc --version
gcc (GCC) 4.4.7 20120313 (Red Hat 4.4.7-3)
Copyright (C) 2010 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
That compiler is currently present on RHEL 6.
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp: In static member function 'static void InstanceKlass::initialize_impl(instanceKlassHandle, Thread*)':
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:703: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:726: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:732: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:738: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:771: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:790: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:824: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:834: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:703: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:726: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:732: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:738: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:771: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:790: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:824: error: cannot reload integer constant operand in 'asm'
/home/sgehwolf/openjdk9-hs-pristine/hotspot/src/share/vm/oops/instanceKlass.cpp:834: error: cannot reload integer constant operand in 'asm'
+ exitcode=1
+ /bin/cp /home/sgehwolf/openjdk9-hs-pristine/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/instanceKlass.o.log /home/sgehwolf/openjdk9-hs-pristine/build/linux-x86_64-normal-server-fastdebug/make-support/failure-logs/hotspot_variant-server_libjvm_objs_instanceKlass.o.log
+ exit 1
gmake[4]: *** [/home/sgehwolf/openjdk9-hs-pristine/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/instanceKlass.o] Error 1
gmake[4]: Leaving directory `/home/sgehwolf/openjdk9-hs-pristine/hotspot/make'
gmake[3]: *** [variant-server-libs] Error 2
gmake[3]: Leaving directory `/home/sgehwolf/openjdk9-hs-pristine/hotspot/make'
gmake[2]: *** [hotspot] Error 1
gmake[2]: Leaving directory `/home/sgehwolf/openjdk9-hs-pristine'
$ gcc --version
gcc (GCC) 4.4.7 20120313 (Red Hat 4.4.7-3)
Copyright (C) 2010 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
That compiler is currently present on RHEL 6.
- backported by
-
JDK-8228583 hotspot build failed with gcc version Red Hat 4.4.7-3
-
- Resolved
-
- relates to
-
JDK-8047382 hotspot build failed with gcc version Red Hat 4.4.6-4
-
- Resolved
-