8185900: hotspot build failed with gcc version Red Hat 4.4.7-3

Cast to void* within DTRACE_CLASS* macros.

Reviewed-by: coleenp, shade